# denstista_ROS2_Drive

./: .gitignore  package.xml  setup.cfg  setup.py
config/: slam_toolbox.yaml
den_rob_package/: odom_publisher.py
denstista_ros2_drive/: OmniSerialBridge.py  motor_controller.py  obstical_avoidance.py  omni_serial_bridge.py
launch/: slam_with_rplidar.launch.py
scripts/: create_map_dir.sh
