<?xml version="1.0"?>
<package format="3">
  <name>denstista_ros2_drive</name>
  <version>0.0.0</version>
  <description>Dentista Robotics Software</description>
  <maintainer email="dominicdigiacomo16@gmail.com">Dominic Digiacomo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <build_export_depend>ament_python</build_export_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!--
  If you need tf_transformations as a ROS package, add it here.
  Otherwise, manage its installation via pip or system package manager.
  -->
  <!-- <exec_depend>tf_transformations</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
